--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - dotnet publish -c release -o PokeAppMVC.csproj
+      - dotnet publish -c release -o ./ PokeAppMVC.csproj
 artifacts:
   files:
     - PokeAppMVC/build_output/**/*
