--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,4 +8,6 @@ phases:
     commands:
       - echo Build started on `date`
       - dotnet publish -c release -o ./build_output PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
+ artifacts:
+  files:
 
