--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,6 +8,9 @@ phases:
     commands:
       - echo Build started on `date`
       - dotnet publish -c release -o ./build_output PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
- artifacts:
+artifacts:
   files:
+    - CodeBuild-SampleCore/build_output/**/*
+    - scripts/**/*
+    - appspec.yml
 
