--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,7 +10,6 @@ phases:
       - dotnet publish -c release -o ./build_output PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
 artifacts:
   files:
-    - CodeBuild-SampleCore/build_output/**/*
-    - scripts/**/*
     - appspec.yml
-
+    - target/PokeAppMVC.exe
+    - scripts/*
