--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,5 +10,5 @@ phases:
       - dotnet publish -c release -o ./build_output PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
 artifacts:
   files:
-    - appspec.yml
+    - appspec.yaml
     - PokeApi-StatelessAPI/build_output/**/*
