--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,5 +10,5 @@ phases:
       - dotnet publish -c release -o ./build_output PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
 artifacts:
   files:
-    - appspec.yaml
+    - appspec.yml
     - PokeApi-StatelessAPI/build_output/**/*
