--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,4 +11,4 @@ phases:
 artifacts:
   files:
     - appspec.yml
-    - PokeApi-StatelessAPI/build_output/**/*
+    - ./codebuild/output/src066163516/src/github.com/RyanMacphee/PokeAPI-StatelessAPI/PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj.
