--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,4 @@ phases:
       - dotnet publish -c release -o ./build_output PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
 artifacts:
   files:
-    - Pokeapptest/codebuild/output/src066163516/src/github.com/RyanMacphee/PokeAPI-StatelessAPI/PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj.
+    - /codebuild/output/src885443480/src/github.com/RyanMacphee/PokeAPI-StatelessAPI/PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
