--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,5 @@ phases:
       - dotnet publish -c release -o PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
 artifacts:
   files:
-    - codebuild/output/src885443480/src/github.com/RyanMacphee/PokeAPI-StatelessAPI/PokeAppMVC/PokeAppMVC/PokeAppMVC.csproj
+    - /**/*
+    - appspec.yml
