--- a/appspec.yaml
+++ b/appspec.yaml
@@ -1,32 +1,13 @@
-
 version: 0.0
-os: linux
-files:
-  - source: PokeAppMVC
-    destination: /home/ec2-user/aspnetcoreapp
-  - source: scripts/virtualhost.conf
-    destination: /home/ec2-user/aspnetcoreapp
-hooks:
-  ApplicationStop:
-    - location: scripts/stop_service
-      timeout: 300
-      runas: root
 
-  BeforeInstall:
-    - location: scripts/remove_application
-      timeout: 300
-      runas: root
+Resources:
+  - PokeAPI: 
+      Type: AWS::Lambda::Function
+      Properties:
+        Name: "PokeAPI" 
+        Alias: "PokeAPI" 
+        CurrentVersion: "1.0" 
+        TargetVersion: "1.0" 
 
-  AfterInstall:
-    - location: scripts/install_dotnetcore
-      timeout: 500
-      runas: root
-
-    - location: scripts/install_httpd
-      timeout: 300
-      runas: root
-
-  ApplicationStart:
-    - location: scripts/start_service
-      timeout: 300
-      runas: root
+Hooks:
+    - AfterAllowTraffic: "" 
