--- a/appspec.yaml
+++ b/appspec.yaml
@@ -6,5 +6,5 @@ Resources:
       Properties:
         Name: "PokeAPIFunction"
         Alias: "PokeAPIAlias"
-        CurrentVersion: "$LATEST"
-        TargetVersion: "$LATEST"
+        CurrentVersion: 0.0
+        TargetVersion: 0.0
