--- a/appspec.yaml
+++ b/appspec.yaml
@@ -6,5 +6,5 @@ Resources:
       Properties:
         Name: "PokeAPIFunction"
         Alias: "PokeAPIAlias"
-        CurrentVersion: 1
-        TargetVersion: 1
+        CurrentVersion: $LATEST 
+        TargetVersion: $LATEST
