--- a/appspec.yaml
+++ b/appspec.yaml
@@ -5,6 +5,6 @@ Resources:
       Type: AWS::Lambda::Function
       Properties:
         Name: "PokeAPIFunction"
-        Alias: "PokeAPIAlias"
+        Alias: "PokeAPIAlias2"
         CurrentVersion: 1
         TargetVersion: 1
